@@ -431,10 +431,12 @@ test(149, dt[J(2:3),roll=TRUE], data.table(a=c(2L,3L),b=c(1L,1L)))  # in future 
 # 150:158 test out of order factor levels in key columns (now allowed from v1.8.0)
 dt = data.table(x=factor(c("c","b","a"),levels=c("b","a","c")),y=1:3)
 setkey(dt,x)
-test(150, dt["b",y]$y, 2L)
+test(150.1, dt["b",y], warning="Coercing character column i.'i' to factor")
+test(150.2, suppressWarnings(dt["b",y])$y, 2L)
 # from Tom's post :
-a = data.table(a=rep(1:5, 2), b=factor(letters[rep(1:5, each =2)], levels=letters[5:1]), key="b")  
-test(151, a[J("b"),a]$a, 3:4)
+a = data.table(a=rep(1:5, 2), b=factor(letters[rep(1:5, each =2)], levels=letters[5:1]), key="b")
+test(151.1, a[J("b"),a], warning="Coercing character column i.'b' to factor")    # TO DO: column names of i highlighted by 150.1 and 151.1 a little odd but no harm for now. Might change that to V1 consistently in future.
+test(151.2, suppressWarnings(a[J("b"),a])$a, 3:4)
 # stretch tests further, two out of order levels, one gets key'd the other not :
 a = data.table(x=factor(letters[rep(1:5, each =2)], levels=letters[5:1]),
                y=factor(letters[rep(c(6,9,7,10,8), each =2)], levels=letters[10:6]),
@@ -1521,6 +1523,9 @@ test(523, set(DT,2L,c("a","a"),list(9L,10L)), data.table(a=INT(1,10,3),b=INT(4,7
 setkey(DT,b)
 test(524, set(DT,2L,"a",2L), data.table(a=1:3, b=INT(4,7,8), key="b")) 
 test(525, set(DT,1L,"b",6L), data.table(a=1:3, b=6:8))
+test(525.1, set(DT,j="b",value=9:11), data.table(a=1:3, b=9:11)) # plonk syntax via missing i (fixed in 1.8.1)
+test(525.2, set(DT,NULL,"b",12:14), data.table(a=1:3, b=12:14))  # plonk syntax via NULL i
+
 
 # Test that data.frame incompability is fixed, came to light in Feb 2012
 DT = data.table(name=c('a','b','c'), value=1:3)
@@ -1583,7 +1588,8 @@ test(546, DT[,sum(v),by=month(date)], data.table(month=2:3,V1=c(11L,15L)))
 x = factor(LETTERS[1:3], levels=rev(LETTERS), ordered=TRUE)
 DT = data.table(A=x,B=x,v=1:3, key="A")
 test(547,is.ordered(DT$A) && is.ordered(DT$B))
-test(548,DT["A",v]$v,1L)
+test(548.1, DT["A",v], warning="Coercing character column i.'i' to factor to match type of x.'A'") 
+test(548.2, suppressWarnings(DT["A",v])$v,1L)
 # Posted by Damian Betebenner ...
 set.seed(123)
 my.course.sample = sample(1:5, 10, replace=TRUE)
